<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.gov.mintic.misiontic.udea.cidlo4.Actividad2">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:gravity="center"
        android:text="@string/segunda_actividad"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#0B219A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDato2"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:textColor="#047809"
        app:layout_constraintBottom_toTopOf="@+id/campoDato2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnActividad2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:onClick="abrirActividad1"
        android:text="@string/ir_a_la_pimera_actividad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoDato2"
        tools:ignore="UsingOnClickInXml" />

    <EditText
        android:id="@+id/campoDato2"
        android:layout_width="287dp"
        android:layout_height="48dp"
        android:layout_marginTop="251dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/digite_algo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>